Revert changes, spline was causing too much performance issues

--- a/index.css
+++ b/index.css
@@ -31,7 +31,10 @@ section {
 
 
 .main-h1 {
+    font-size: 75px;
+    white-space: nowrap;
 
+    transition: transform ease 3s;
 }
 
 #link-container {
@@ -138,9 +141,6 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-
-    position: absolute;
-    z-index: 5;
 }
 
 #nav-hover {
